syntax = "proto3";

package attestation;

service RemoteAttestation {
  rpc getAttestationEvidence (RemoteAttestationReq) returns (RemoteAttestationRes) {}
}

message RemoteAttestationReq {}

message RemoteAttestationRes {
  string evidence = 1;
}